<resources>
    <string name="app_name">To-Do List</string>
    <string name="task_description">Task Description</string>
    <string name="priority">Priority :</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add">Add</string>
    <string name="update">Update</string>

    <string name="h">H</string>
    <string name="m">M</string>
    <string name="l">L</string>

</resources>
