<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".TaskActivity">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/desc_et"
        android:gravity="start"
        android:hint="@string/task_description"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority"
        android:textColor="@android:color/primary_text_light" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/redMaterial"
            android:checked="true"
            android:text="High"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orangeMaterial"
            android:text="@string/medium"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellowMaterial"
            android:text="@string/low"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textColor="@android:color/primary_text_dark" />


</LinearLayout>